<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jaskirat.calculatorapp.MainActivity">

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.widget.Button
                android:id="@+id/ClearBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="ClearBtn"
                android:text="@string/Clear"
                android:textColor="#FF3D00"
                android:textSize="35sp"
                tools:ignore="UsingOnClickInXml" />

            <android.widget.Button
                android:id="@+id/SquareRootBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="squareRootBtn"
                android:text="@string/squareRoot"
                android:textColor="#48E14E"
                android:textSize="35sp"
                tools:ignore="UsingOnClickInXml" />

            <android.widget.Button
                android:id="@+id/PercentBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="PercentBtn"
                android:text="@string/Percent"
                android:textColor="#48E14E"
                android:textSize="35sp"
                tools:ignore="UsingOnClickInXml" />

            <android.widget.Button
                android:id="@+id/DivisionBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="operatorEvent"
                android:text="@string/Division"
                android:textColor="#48E14E"
                android:textSize="35sp"
                tools:ignore="UsingOnClickInXml" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.widget.Button
                android:id="@+id/NineBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="numberEvent"
                android:text="@string/Nine"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                tools:ignore="UsingOnClickInXml" />

            <android.widget.Button
                android:id="@+id/EightBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="numberEvent"
                android:text="@string/Eight"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                tools:ignore="UsingOnClickInXml" />

            <android.widget.Button
                android:id="@+id/SevenBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="numberEvent"
                android:text="@string/Seven"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                tools:ignore="UsingOnClickInXml" />

            <android.widget.Button
                android:id="@+id/MultiplyBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="operatorEvent"
                android:text="@string/Multiplication"
                android:textColor="#48E14E"
                android:textSize="35sp"
                tools:ignore="UsingOnClickInXml" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.widget.Button
                android:id="@+id/SixBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="numberEvent"
                android:text="@string/Six"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                tools:ignore="UsingOnClickInXml" />

            <android.widget.Button
                android:id="@+id/FiveBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="numberEvent"
                android:text="@string/Five"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                tools:ignore="UsingOnClickInXml" />

            <android.widget.Button
                android:id="@+id/fourBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="numberEvent"
                android:text="@string/Four"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                tools:ignore="UsingOnClickInXml" />

            <android.widget.Button
                android:id="@+id/SubtractBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="operatorEvent"
                android:text="@string/Subtraction"
                android:textColor="#4CD852"
                android:textSize="41sp"
                tools:ignore="TextContrastCheck,UsingOnClickInXml" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.widget.Button
                android:id="@+id/OneBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="numberEvent"
                android:text="@string/one"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                tools:ignore="UsingOnClickInXml" />

            <android.widget.Button
                android:id="@+id/TwoBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="numberEvent"
                android:text="@string/Two"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                tools:ignore="UsingOnClickInXml" />

            <android.widget.Button
                android:id="@+id/ThreeBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="numberEvent"
                android:text="@string/Three"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                tools:ignore="UsingOnClickInXml" />

            <android.widget.Button
                android:id="@+id/AddBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="operatorEvent"
                android:text="@string/Addition"
                android:textColor="#48E14E"
                android:textSize="35sp"
                tools:ignore="UsingOnClickInXml" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.widget.Button
                android:id="@+id/plusMinusBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="numberEvent"
                android:text="@string/plusMinus"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                tools:ignore="UsingOnClickInXml" />

            <android.widget.Button
                android:id="@+id/ZeroBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="numberEvent"
                android:text="@string/Zero"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                tools:ignore="UsingOnClickInXml" />

            <android.widget.Button
                android:id="@+id/DecimalBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="numberEvent"
                android:text="@string/Decimal"
                android:textColor="#FFFFFF"
                android:textSize="35sp"
                tools:ignore="UsingOnClickInXml" />

            <android.widget.Button
                android:id="@+id/EqualBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#47E14D"
                android:onClick="EqualBtn"
                android:text="@string/Equals"
                android:textColor="#FFFFFF"
                android:textSize="35sp"
                tools:ignore="UsingOnClickInXml" />

        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/input"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:autofillHints="false"
        android:background="#4BFFFFFF"
        android:clickable="false"
        android:inputType="none"
        android:text="@string/Display"
        android:textAlignment="textEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/BackspaceBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        android:layout_weight="1"
        android:background="@drawable/backspace"
        android:contentDescription="@string/backspace"
        android:onClick="BackspaceBtn"
        android:text="@string/backspace"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck,UsingOnClickInXml" />

    <android.widget.Button
        android:id="@+id/cubeRootBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="310dp"
        android:layout_height="46dp"
        android:layout_margin="4dp"
        android:layout_weight="30"
        android:background="@drawable/circle"

        android:onClick="cubeRootBtn"
        android:text="@string/CubeRoot"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toStartOf="@+id/BackspaceBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnClickInXml" />




</androidx.constraintlayout.widget.ConstraintLayout>